# cookiecutter-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.yml  cookiecutter.json  pyproject.toml
.github/workflows/: deployment-win.yml  deployment.yml
hooks/: post_gen_project.py
tests/: conftest.py  test_builds.py  test_template.py
{{cookiecutter.folder_name}}/: README.md  pyproject.toml  pytest.ini  setup.py
{{cookiecutter.folder_name}}/.github/workflows/: cicd.yml
{{cookiecutter.folder_name}}/docsrc/: Makefile  requirements.txt
{{cookiecutter.folder_name}}/docsrc/source/: conf.py  index.rst
{{cookiecutter.folder_name}}/docsrc/source/_templates/: custom-class-template.rst  custom-module-template.rst
{{cookiecutter.folder_name}}/{{cookiecutter.package_slug}}/: __init__.py
{{cookiecutter.package_name}}/: .gitignore  LICENSE.md  pyproject.toml  pytest.ini  setup.py
{{cookiecutter.package_name}}/.github/workflows/: deployment.yml
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/{{cookiecutter.package_slug}}/: __init__.py
