[tool.poetry]
name = "cookiecutter-python"
version = "0.2.0"
description = "cookiecutter python template"
authors = ["giocaizzi <giocaizzi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-cookies = "^0.7.0"
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-rst-docstrings = "^0.3.0"

[tool.pytest.ini_options]
testpaths = ["tests",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
