[tool.poetry]
name = "cookiecutter-python"
version = "0.2.2"
description = "cookiecutter python template"
authors = ["giocaizzi <giocaizzi@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-cookies = "^0.7.0"
flake8 = "^7.0.0"
flake8-rst-docstrings = "^0.3.0"
black = { extras = ["jupyter"], version = "^24.4.2" }

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = "--cov --cov-report html"

[tool.coverage.report]
# include = ["{{cookiecutter.package_slug}}/*"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/giocaizzi/cookiecutter-python"
Documentation = "https://giocaizzi.github.io/cookiecutter-python/"
Repository = "https://github.com/giocaizzi/cookiecutter-python"
Issues = "https://github.com/giocaizzi/cookiecutter-python/issues"
