[tool.poetry]
name = "{{cookiecutter.package_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report xml --cov-report html --cov-report lcov"

[tool.coverage.report]
include = ["{{cookiecutter.package_slug}}/*"]

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = [
    # black compatibility
    # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#minimal-configuration
    "E203",
    "E701",
    # RST201, RST203, RST301 - Google Python Style docstrings cause errors (ref:??)
    "RST201",
    "RST203",
    "RST301",
]
exclude = ["tests", ".github", ".vscode", "docs", "docsrc", "temp", " ./build"]

max-line-length = 88
# E203, E701, - black compatibility
# RST201, RST203, RST301 - Google Python Style docstrings cause errors
# exclude directories

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

{% if cookiecutter.add_urls == "true" %}
[tool.poetry.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_slug}}"
Documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.package_slug}}/"
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_slug}}"
Issues =  "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_slug}}/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
{% endif %}

